--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@tailwindcss/forms": "^0.5.3",
@@ -16,7 +17,6 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@upstash/redis": "^1.21.0",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
@@ -41,5 +41,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14"
   }
 }
